testdata/baselines/reference/submodule/compiler/conflictMarkerTrivia3.errors.txt
conflictMarkerTrivia3.tsx(1,16): error TS17002: Expected corresponding JSX closing tag for 'div'.
conflictMarkerTrivia3.tsx(1,16): error TS1005: ',' expected.
conflictMarkerTrivia3.tsx(1,16): error TS1005: '</' expected.
conflictMarkerTrivia3.tsx(2,1): error TS1185: Merge conflict marker encountered.


==== conflictMarkerTrivia3.tsx (4 errors) ====
    const x = <div>
                   
!!! error TS17002: Expected corresponding JSX closing tag for 'div'.
                   
                   
    <<<<<<< HEAD
    ~~~~~~~~~~~~
!!! error TS1005: ',' expected.
    ~~~~~~~~~~~~
!!! error TS1005: '</' expected.
    ~~~~~~~
!!! error TS1185: Merge conflict marker encountered.